Closed Bug 607159 Opened 14 years ago Closed 14 years ago

GC::reversePointersWithinBlock can assert in Debug builds

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stejohns, Assigned: stejohns)

Details

Attachments

(1 file)

It calls GetMark(), which assumes the input pointer is the start of a GC object; we call it with a pointer into the middle of an object.
Attached patch PatchSplinter Review
Simple fix, rework to pass an explicit offset.
Assignee: nobody → stejohns
Attachment #485921 - Flags: review?(lhansen)
Attachment #485921 - Flags: review?(lhansen) → review+
TR 5392:c2990a5e96f4
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: