Bug 607159 - GC::reversePointersWithinBlock can assert in Debug builds (r=lhansen)